objects/ssot__MealCardActivity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityDateTime__c</fullName>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Meal Card Activity Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationName__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MealCardBalanceAmount__c</fullName>
        <label>Meal Card Balance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionAmount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionType__c</fullName>
        <label>Transaction Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039797887_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MealCardActivity_AcademicTermId_map__rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>MealCardActivity_AcademicTermId_map__rel</relationshipLabel>
        <relationshipName>rel_1731039797887_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040471595_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MealCardActivity_LocationId_map_Loca_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>MealCardActivity_LocationId_map_Loca_rel</relationshipLabel>
        <relationshipName>rel_1731040471595_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040482373_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MealCardActivity_IndividualId_map_In_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>MealCardActivity_IndividualId_map_In_rel</relationshipLabel>
        <relationshipName>rel_1731040482373_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>